--- a/app/globals.css
+++ b/app/globals.css
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
 @import '../node_modules/bs-icon/icons.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 * {
   font-family: 'Inter', sans-serif;
 }
@@ -11,4 +12,17 @@
 html,
 body {
   height: 100%;
+}
+
+.mapboxgl-popup-tip,
+.mapboxgl-popup-close-button {
+  display: none;
+}
+
+.mapboxgl-popup-content {
+  top: -35px;
+  padding: 0 !important;
+  border-radius: 12px !important;
+  overflow: hidden !important;
+  box-shadow: '0 6px 20px rgba(0,0,0,0.2)';
 }
